yaml/network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: graphql-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql
spec:
  hosts:
  - "*"
  gateways:
  - graphql-gateway
  http:
  - match:
    - uri:
        exact: /q/graphql-ui/
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: graphql-quarkus-svc
        port:
          number: 8080
